--- a/pages/settingCredit/settingCredit.wxml
+++ b/pages/settingCredit/settingCredit.wxml
@@ -1,27 +1,31 @@
 <!--pages/settingCredit/settingCredit.wxml-->
-<view class="weui-cells">
-    <navigator url="../creditIntroducion/creditIntroducion" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-        <view class="weui-cell__bd">用户信用说明</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access">查看</view>
-    </navigator>   
-</view>
-
-<view class="weui-cells__title">信用参数设置</view>
-<view class="weui-cells weui-cells_after-title">
+<view class="weui-cells ">
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-        <view class="weui-cell__bd">正常取消预约提前量</view>
+        <view class="weui-cell__bd">取消预约提前量</view>
         <view class="weui-cell__ft weui-cell__ft_in-access">
           <picker style='width:200px;' value="{{cancelTimeIndex}}" range="{{cancelTimes}}"  bindchange="bindCancelChange">
             <view>{{cancelTimes[cancelTimeIndex]}}</view>
           </picker>
         </view>
-    </view>  
+    </view>     
+</view>
+<view class="cells-footer_title">在这个时间之内取消预约会影响用户信用</view>
+
+<view class="weui-cells">    
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-        <view class="weui-cell__bd">失信用户停用时间</view>
+        <view class="weui-cell__bd">失信用户禁止预约天数</view>
         <view class="weui-cell__ft weui-cell__ft_in-access">
           <picker style='width:200px;' value="{{disableTimeIndex}}" range="{{disableTimes}}"  bindchange="bindCancelChange">
             <view>{{disableTimes[disableTimeIndex]}}</view>
           </picker>
         </view>
     </view>   
+</view>
+<view class="cells-footer_title">用户信用降到零时，禁止使用预约功能的天数</view>
+
+<view class="weui-cells">
+    <navigator url="../creditIntroducion/creditIntroducion" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__bd">信用体系使用说明</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access">查看</view>
+    </navigator>   
 </view>
