--- a/template/authView/authView.wxml
+++ b/template/authView/authView.wxml
@@ -1,7 +1,7 @@
 <!--template/authView.wxml-->
 <!-- 授权提示视图 -->
 <template name="authView">
-  <van-popup show="{{ showAuthView }}" bind:close="onClose" custom-class="auth-view">  
+  <van-popup show="{{ showAuthView }}" bind:close="onClose" custom-class="auth-view" custom-style="top:300px;">  
     <view class="popup-view_title">需要您的授权</view>
     <view class="line auth-view_line"></view>
     <view class="popup-view_info auth-view_info">使用新的身份使用小程序提供的服务</view>
