--- a/pages/settingPrice/settingPrice.wxml
+++ b/pages/settingPrice/settingPrice.wxml
@@ -1,30 +1,18 @@
 <!--pages/settingPrice/settingPrice.wxml-->
 <view class="weui-cells weui-cells_after-title">
-  <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-          <view class="weui-label">小型车</view>
-      </view>
-      <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="请输入"/>
-      </view>
+  <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <view class="weui-cell__bd">轿车</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access">30元</view>
   </view>
-  <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-          <view class="weui-label">中型车</view>
-      </view>
-      <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="请输入"/>
-      </view>
-  </view>
-  <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-          <view class="weui-label">大型车</view>
-      </view>
-      <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="请输入"/>
-      </view>
+  <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <view class="weui-cell__bd">SUV</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access">45元</view>
   </view>
 </view>
-<view class="weui-cells__title">单位：元</view>
 
-<button style='margin-top:60rpx;' class="button button_margin_16" type="primary" bindtap="onSave">确定</button>
+<view class="cells-extra_btn weui-cells_after-title" bindtap='onEditPrice'>  
+  <view class="weui-cell cells-cell_extra_btn">
+    添加车型
+  </view>
+</view>
+
