--- a/app.wxss
+++ b/app.wxss
@@ -156,15 +156,26 @@ page{
   margin-right: 10px;
 }
 
-/** */
+/** 列表尾解释说明视图 */
 .cells-footer_title {
   font-size: 13px;
-  color:#8e8e93;
-  font-weight: 500;
+  color:#8e8e93;  
   height: 28px;
   line-height: 28px;
-  
+
   margin-left: 16px;
+}
+
+.cells-extra_btn {
+   border-top-width: 0rpx;
+   border-bottom:1rpx solid #d9d9d9;
+   background-color: white;
+   height: 44px;
+}
+.cells-cell_extra_btn {
+  justify-content: center;
+  color:#0091FF;
+  font-size:17px;
 }
 
 .container {
