--- a/pages/settingCredit/settingCredit.wxml
+++ b/pages/settingCredit/settingCredit.wxml
@@ -1,6 +1,18 @@
 <!--pages/settingCredit/settingCredit.wxml-->
 <view class="weui-cells ">
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__bd">预约提前量</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access">
+          <picker style='width:200px;' value="{{cancelTimeIndex}}" range="{{cancelTimes}}"  bindchange="bindCancelChange">
+            <view>{{cancelTimes[cancelTimeIndex]}}</view>
+          </picker>
+        </view>
+    </view>     
+</view>
+<view class="cells-footer_title">距离实际预约时间之前多久可以取消预约。</view>
+
+<view class="weui-cells ">
+    <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">取消预约提前量</view>
         <view class="weui-cell__ft weui-cell__ft_in-access">
           <picker style='width:200px;' value="{{cancelTimeIndex}}" range="{{cancelTimes}}"  bindchange="bindCancelChange">
@@ -9,7 +21,7 @@
         </view>
     </view>     
 </view>
-<view class="cells-footer_title">在这个时间之内取消预约会影响用户信用</view>
+<view class="cells-footer_title">在这个时间之内取消预约会影响用户信用。</view>
 
 <view class="weui-cells">    
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
@@ -21,7 +33,7 @@
         </view>
     </view>   
 </view>
-<view class="cells-footer_title">用户信用降到零时，禁止使用预约功能的天数</view>
+<view class="cells-footer_title">用户信用降到零时，禁止使用预约功能的天数。</view>
 
 <view class="weui-cells">
     <navigator url="../creditIntroducion/creditIntroducion" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
