--- a/pages/settingPayment/settingPayment.wxss
+++ b/pages/settingPayment/settingPayment.wxss
@@ -2,25 +2,26 @@
 .weui-media-box{padding:0px;position:relative;}
 
 .cell {
-  height: 60px;
-  line-height: 60px;
+  height: 44px;
+  line-height: 44px;
   text-align: center;
-  margin-left: 22px;
+  margin-left: 16px;
+  font-size: 17px;
 }
 
 
 .cell-value {
   font-size: 14px;
-  color:#2e749e;
-  margin-right: 22px;
+  color:#999;
+  margin-right: 16px;
 }
 
 .cell-del {
   color: white;
   text-align: center;
   width:80px;
-  height:120rpx; 
+  height:88rpx; 
   background-color:red;
   font-size: 15px;
-  line-height: 120rpx;
+  line-height: 88rpx;
 }
