--- a/pages/editHoliday/editHoliday.wxml
+++ b/pages/editHoliday/editHoliday.wxml
@@ -1,2 +1,26 @@
 <!--pages/editHoliday/editHoliday.wxml-->
-<text>pages/editHoliday/editHoliday.wxml</text>
+<view class="weui-cells__title">起止日期</view>
+<view class="weui-cells weui-cells_after-title">
+    <view class="weui-cell">
+        <view class="weui-cell__bd">开始日期</view>
+         <picker style='width:60%;' class="weui-cell__ft weui-cell__ft_in-access" mode="date" data-index="1" bindchange="bindDateChange">
+              <view class="picker">请选择</view>
+          </picker>
+        
+    </view>
+
+    <view class="weui-cell" data-index="2">
+        <view class="weui-cell__bd">结束日期</view>
+         <picker style='width:60%;' class="weui-cell__ft weui-cell__ft_in-access" mode="date" data-index="2" bindchange="bindDateChange">
+                <view class="picker">请选择</view>
+            </picker>
+    </view>
+</view>
+
+<view class="weui-btn-area">
+    <button bindtap="onSave" class="weui-btn" type="primary">保存</button>
+</view>
+
+<view style='text-align:center; line-height: 44px;' class="cells-extra_btn font-size_17 font-color_red">
+    删除
+</view>
