--- a/pages/bindManagerRole/bindManagerRole.wxml
+++ b/pages/bindManagerRole/bindManagerRole.wxml
@@ -1,9 +1,11 @@
 <!--pages/bindManagerRole/bindManagerRole.wxml-->
-<view class="login-view">
-  <input class="login-view_input font-size_17" placeholder="请输入店铺密码" auto-focus></input>
-</view>
-<view class="group-view font-size_13">
-  仅在店长第一次登录时需要绑定身份，如果不知道密码，请联系技术支持。
-</view>
+<form bindsubmit="onClickLogin">
+  <view class="login-view">
+    <input name="password" class="login-view_input font-size_17" placeholder="请输入店铺密码" auto-focus></input>
+  </view>
+  <view class="group-view font-size_13">
+    仅在店长第一次登录时需要绑定身份，如果不知道密码，请联系技术支持。
+  </view>
 
-<button class="button" type="primary" bindtap="onClickLogin">登录</button>
+  <button formType="submit" class="button" type="primary">登录</button>
+</form>
