完善公共查询、添加流程

--- a/app.wxss
+++ b/app.wxss
@@ -138,9 +138,10 @@ page{
 .add-employees-view {
   width: 100%;
   position: fixed;
-  bottom: 10px;
-  height: 84px;
+  /* bottom: 10px; */
+  height: 94px;
   border-top: 1rpx solid #e5e5e5;
+  background-color:#efeff4;
 }
 
 .add-employees-view_inner {
