--- a/pages/announcementList/announcementList.wxml
+++ b/pages/announcementList/announcementList.wxml
@@ -1,17 +1,20 @@
 <!--pages/announcementList/announcementList.wxml-->
-<view class="page">
-  <view class="weui-panel weui-panel_access" bindtap='onPreview'>                        
+<view style="height:{{height}}px; z-index:1" class="page">
+  <view wx:for="{{announces}}" wx:key="*this" wx:for-item="announce" class="weui-panel weui-panel_access" bindtap='onPreview'>                        
     <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
         <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-            <image style='border-radius:5px;width:64px;height:64px;' lazy-load="true" class="weui-media-box__thumb" src="https://wx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTIcmzyS3AEgHKmlY4Wl67enrRScxhv0AAlfQ0txCqMqpUYt8DSPF4NSTCbuA4qiaeRiboUNa2qXCibWg/132" />
+            <image mode="aspectFill" style='border-radius:5px;width:64px;height:64px;' lazy-load="true" class="weui-media-box__thumb" src="{{announce.images[0].url}}" />
         </view>
         <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__title_fixed">仅售198元，价值415元【汽车美容】五座轿车漆面抛光祛污，节假日通用！</view>
-            <view class="weui-media-box__desc">显示位置：1</view>
+            <view class="weui-media-box__title_fixed">{{announce.title}}</view>
+            <view class="weui-media-box__desc">显示位置：{{announce.weight}}</view>
         </view>
     </view>                        
-  </view>    
+  </view>  
+
+  <view style="width:1px; height:94px;"></view> 
 </view>
+
 
 <view class="add-employees-view">
   <view class="weui-flex add-employees-view_inner" bindtap='onEditAnoncement'>
@@ -19,3 +22,6 @@
     <label>添加公告</label>
   </view>
 </view>
+
+
+
