--- a/app.wxss
+++ b/app.wxss
@@ -138,7 +138,7 @@ page{
 .add-employees-view {
   width: 100%;
   position: fixed;
-  /* bottom: 10px; */
+  bottom: 10px;
   height: 94px;
   border-top: 1rpx solid #e5e5e5;
   background-color:#efeff4;
