--- a/pages/editAnnouncement/editAnnouncement.wxml
+++ b/pages/editAnnouncement/editAnnouncement.wxml
@@ -4,7 +4,7 @@
   <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell weui-cell_input">
           <view class="weui-cell__bd">
-              <input name="title" class="weui-input" placeholder="选填" />
+              <input name="title" class="weui-input" placeholder="请输入标题" value="{{title}}" />
           </view>
       </view>
   </view>
@@ -13,7 +13,7 @@
   <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell">
           <view class="weui-cell__bd">
-              <textarea name="desc" class="weui-textarea" placeholder="请输入详情" style="height: 7em" />             
+              <textarea name="desc" class="weui-textarea" placeholder="请输入详情" style="height: 7em" value="{{desc}}" />             
           </view>
       </view>
   </view>
@@ -29,9 +29,10 @@
           <view class="weui-uploader__bd">
               <view class="weui-uploader__files" id="uploaderFiles">
                   <block wx:for="{{images}}" wx:key="*this">
-                      <view class="weui-uploader__file" bindtap="previewImage" id="{{item}}">
-                          <image class="weui-uploader__img" src="{{item.path}}" mode="aspectFill" />
-                      </view>
+                      <view class="weui-uploader__file">
+                          <image  bindtap="previewImage" id="{{item.path}}" class="weui-uploader__img" src="{{item.path}}" mode="aspectFill" />
+                          <view bindtap='onDelImage' id="{{index}}" data-sid="{{item.sid}}" data-url="{{item.path}}" class="uploader__img_del"><wxc-icon class="uploader__img_del" size='40' type='no'></wxc-icon></view>
+                      </view>                      
                   </block>                      
               </view>
               <view class="weui-uploader__input-box">
