--- a/pages/editPrice/editPrice.wxml
+++ b/pages/editPrice/editPrice.wxml
@@ -1,21 +1,31 @@
 <!--pages/editPrice/editPrice.wxml-->
-<view class="weui-cells weui-cells_after-title">
-  <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-          <view class="weui-label">车型描述</view>
-      </view>
-      <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="请输入"/>
-      </view>
+<form bindsubmit="onSave">
+  <view class="weui-cells weui-cells_after-title">
+    <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+            <view class="weui-label">车型描述</view>
+        </view>
+        <view class="weui-cell__bd">
+            <input name="model" class="weui-input" placeholder="请输入" value="{{carModel.model}}"/>
+        </view>
+    </view>
+    <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+            <view class="weui-label">洗车价格</view>
+        </view>
+        <view class="weui-cell__bd">
+            <input type='number' name="normalPrice" class="weui-input" placeholder="请输入" value="{{carModel.normalPrice}}"/>
+        </view>
+    </view>
+    <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+            <view class="weui-label">显示位置</view>
+        </view>
+        <view class="weui-cell__bd">
+            <input name="weight" type='number' class="weui-input" placeholder="请输入" value='{{carModel.weight}}'/>
+        </view>
+    </view>
   </view>
-  <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-          <view class="weui-label">洗车价格</view>
-      </view>
-      <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="请输入"/>
-      </view>
-  </view>
-</view>
 
-<button style='margin-top:112rpx;' class="button button_margin_16" type="primary" bindtap="onSave">保存</button>
+  <button style='margin-top:112rpx;' class="button button_margin_16" type="primary" formType="submit">保存</button>
+</form>
