--- a/pages/settingCredit/settingCredit.wxml
+++ b/pages/settingCredit/settingCredit.wxml
@@ -3,8 +3,8 @@
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">预约提前量</view>
         <view class="weui-cell__ft weui-cell__ft_in-access">
-          <picker style='width:200px;' value="{{cancelTimeIndex}}" range="{{cancelTimes}}"  bindchange="bindCancelChange">
-            <view>{{cancelTimes[cancelTimeIndex]}}</view>
+          <picker style='width:200px;' value="{{fowardTimeIndex}}" range="{{fowardTimes}}"  bindchange="bindForwardTimeChange">
+            <view>{{fowardTimes[fowardTimeIndex]}}分钟</view>
           </picker>
         </view>
     </view>     
@@ -15,8 +15,8 @@
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">取消预约提前量</view>
         <view class="weui-cell__ft weui-cell__ft_in-access">
-          <picker style='width:200px;' value="{{cancelTimeIndex}}" range="{{cancelTimes}}"  bindchange="bindCancelChange">
-            <view>{{cancelTimes[cancelTimeIndex]}}</view>
+          <picker style='width:200px;' range-key="text" value="{{cancelTimeIndex}}" range="{{cancelTimes}}"  bindchange="bindCancelTimeChange">
+            <view>{{cancelTimes[cancelTimeIndex].text}}</view>
           </picker>
         </view>
     </view>     
@@ -27,8 +27,8 @@
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">失信用户禁止预约天数</view>
         <view class="weui-cell__ft weui-cell__ft_in-access">
-          <picker style='width:200px;' value="{{disableTimeIndex}}" range="{{disableTimes}}"  bindchange="bindCancelChange">
-            <view>{{disableTimes[disableTimeIndex]}}</view>
+          <picker style='width:150px;' value="{{disableTimeIndex}}" range="{{disableTimes}}"  bindchange="bindBanTimeChange">
+            <view>{{disableTimes[disableTimeIndex]}} 天</view>
           </picker>
         </view>
     </view>   
