--- a/pages/settingTime/settingTime.wxml
+++ b/pages/settingTime/settingTime.wxml
@@ -30,7 +30,7 @@
 <view class="weui-cells">
     <navigator url="../editHoliday/editHoliday" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">放假日期</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access">2月1日-2月14日</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access">{{restDate}}</view>
     </navigator>    
 </view>
 <view class="cells-footer_title">放假日期内小程序预约服务自动停止</view>
